--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple FSM for typescript.",
   "main": "index.ts",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,6 @@
   "devDependencies": {
     "@types/jest": "^29.2.6",
     "jest": "^29.3.1",
-    "ts-jest": "^29.0.5"
+    "typescript": "^4.9.4"
   }
 }
