--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "state-machine",
+  "name": "stickler",
   "version": "1.0.0",
   "description": "A simple FSM for typescript.",
   "main": "index.ts",
