--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "stickler",
   "version": "0.1.0",
   "description": "A simple FSM for typescript.",
-  "main": "index.ts",
+  "main": "dist/index.js",
   "scripts": {
     "test": "jest",
-    "build": "tsc"
+    "build": "tsc",
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
