--- a/.github/workflows/npm-publish-github-npm.yml
+++ b/.github/workflows/npm-publish-github-npm.yml
@@ -33,7 +33,7 @@ jobs:
       - run: npm ci
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          NPM_TOKEN: ${{secrets.npm_token}}
           
   publish-npm:
     needs: build
@@ -47,4 +47,4 @@ jobs:
       - run: npm ci
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+          NPM_TOKEN: ${{secrets.GITHUB_TOKEN}}
